# pune-prompt-wars-warmup-qa-chatbot

./: README.md  deployment_guide.md  self_evaluation.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/agents/: factory.py  orchestrator.py  tools.py
backend/app/memory/: __init__.py  long_term.py  short_term.py
backend/app/routes/: auth.py  chat.py  health.py  sessions.py  user.py
backend/app/utils/: auth.py  file_processor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatInterface.tsx  ProtectedRoute.tsx
frontend/src/components/chat/: ChatHeader.tsx  ChatInput.tsx  DashboardModal.tsx  EmptyState.tsx  MessageBubble.tsx  MessageList.tsx  ProfileCard.tsx  Sidebar.tsx  TypingIndicator.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: LoginPage.tsx  OnboardingPage.tsx  SignupPage.tsx
